tuned turret interplut